--- a/MiniFiguras/platforms/android/assets/www/lista.html
+++ b/MiniFiguras/platforms/android/assets/www/lista.html
@@ -10,7 +10,6 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-<link href="css/index.css" rel="stylesheet" type="text/css">
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -32,13 +31,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Las Frutas</a>
+      <a class="navbar-brand" href="index.html">
+
+  <span class="glyphicon glyphicon-chevron-left"></span> 
+
+</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="lista.html">Ver Frutas</a></li>
+        <li class="active"><a href="lista.html">Ver Frutas</a></li>
         <li><a href="#">Agregar Frutas</a></li
       ></ul>
     </div><!-- /.navbar-collapse -->
@@ -49,6 +52,6 @@
         
 
       
-<!-- <img src="img/frutasverduras.jpg" class="img-responsive img-rounded" alt="Responsive image">-->
+
     </body>
 </html>
